# photo-categorizer

./: LICENSE  README.md  pyproject.toml
photo_categorizer/: config.py  logger.py  main.py  state.py
photo_categorizer/backend/: backend.py
photo_categorizer/frontend/: frontend.py  styles.qss
photo_categorizer/model/: BaseModelEngine.py  clip_engine.py  model.py  model_factory.py  model_types.py
