[project]
name = "photo_categorizer"
version = "0.1.0"
description = "AI-powered desktop app for photo categorization"
authors = [
    {name = "KaiLi0822",email = "18840864172@163.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyqt6 (>=6.8.1,<7.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "torch (>=2.1.2,<3.0.0)",
    "numpy (>=1.24,<2.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "qai-hub-models (>=0.24.3,<0.25.0)",
    "ftfy (==6.1.1)",
    "regex (==2023.10.3)",
    "pyinstaller (>=6.12.0,<7.0.0)",
    "psutil (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
